refactor(seller): improve error messages